[package]
name = "nvie"
version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["Ed Sweeney <ed@onextent.com>"]
description = "An Ingress Controller for Kubernetes"
keywords = ["kubernetes", "k8s"]
documentation = "https://docs.rs/nvi"
repository = "https://github.com/navicore/nvi"


[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
fakeit = "1.1"
futures = "0.3"
itertools = "0.12"
k8s-openapi = { version = "0.21", features = ["v1_26"] }
kube = { version = "0.88", features = ["runtime", "derive", "client", "ws"] }
regex = "1.10"
rustls = "0.23"
thiserror = "1"
time = "0.3" # For handling dates in the certificate
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = "0.24"
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = [ "v4" ] }

[dev-dependencies]
anyhow = "1"
